[project]
name = "AVALON"
version = "0.1.0"
description = "AVALON AI"
authors = [
    { name = "dig04214", email = "dig04214@naver.com" },
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-community>=0.3.25",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.8",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
